# customer-conversion-prediction-api

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py  predictor.py  schemas.py
data/: marketing_conversion_data.csv
notebooks/: marketing_eda.ipynb
training/: generate_data.py  train.py
